--- a/opp.html
+++ b/opp.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN">
 <html>
 <head>
-  <title>Opportunities</title>
+  <title>Risks</title>
     <link rel="stylesheet" href="newstyle.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
@@ -46,37 +46,20 @@
 </div>
 <br>
 <br>
+ 
 
 <!-- Main content -->
-  <h1><div class="t-center">What Opportunities are there for artificial body parts and organs?</div></h1>
-
-<br>
-<br>
-
-<p>“The use of artificial organs is likely to increase in the future, given technological advances, increases in chronic diseases, and limited donor organs” (Walker 2021), so there is no telling what new doors could artificial body parts lead to.</p>
-
-<br>
-<br>
-<br>
-
-<h1>Appearance</h1>
-<br>
-
-<p><img src="img/naarm.jpg" alt="natural" style="float:left; width: 300px; margin-right:15px;">
-For people who receive artificial limbs to replace the certain type of limb on the area affected, sometimes they can feel embarrassed about the  bionic look of the limb due to it not looking like the "norm", though this may not affect everyone there has been efforts of trying to give bionic limbs a more natural appearance, and if this doesn’t apply to a individual they can always do their own customization that gives their arm a more unique look and feel.
-</p>
-
+<h1><div class="t-center">The Risks of artificial body parts and organs</div></h1>
 
 <br>
 <br>
 <br>
 <br>
 
-<h1>Control</h1>
-<br>
-
-<p><img src="img/nerarm.jpg" alt="nervous system" style="float:right; width: 450px; height:350px ;margin-left:15px;">
-Obviously one of the main purposes of the bionic limbs is to make the prosthetic more responsive to the user’s commands. Prosthetics have been shown to be able to move, however not with the full range of motion like an actual limb. Over the years engineers have been working hard to create a system that is more responsive, has  the full range of motion like an actual limb and to make it more functional. One of the main methods of creating a more responsive prosthetic has been linking the artificial limb to the user's mind. This allows the limb  to receive commands from the central nervous system with quicker response times with less lag. This allows the limb to recreate normal movement and functionality, and instantly triggers the desired movement, creating a more fluid and natural feel for the user when using the limb.
+  <h1>Conceptualisation</h1>
+ <br>
+ <p>
+The use of artificial body parts allows people to view a person as a machine-like object rather than a human being. The possibility of a body part or organ being replaced, alters the perception of what the normal body status is, as it is confirming body parts are replaceable objects. This can be devaluing for a person with an artificial body part and made them to feel different than everyone else. Walker (2019) conducted a study which argues that the status of a ‘normal’ human being relies on the relationship of a body to a person, and if a prosthesis allows someone to feel human again then everyone should view artificial body parts as ordinary. “In approaching ethical issues surrounding prostheses, it is appropriate to regard them as more like body parts than like objects”, (Walker, 2019). In the future, the technological advances in artificial body parts may increase a more “natural seeming experience” (Svenaeus 2010) which supports the way people with prostheses is looked at. It may also be hard for the people with artificial body parts to accept the fact that they are relying on a piece of technology to function. This may impact their behaviour and be hard for them to identify with. 
 </p>
 
 <br>
@@ -84,34 +67,69 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 <br>
 <br>
 
-<h1>Production</h1>
-
-<br>
-
-<p>As of right now artificial body parts and organs are not available to everyone who is in need of prostheses, however we can expect there to be mass reproduction of artificial body parts. With the advancement of technology we can expect that mass reproduction will make the development of artificial body parts and organs cheaper to make, and will become readily available for people that need these artificial body parts. “I think we are just getting started… There is just a tremendous amount of potential ahead of us, and we've just started down this road. And I think the next five to 10 years are going to bring phenomenal advancement.” (Michael McLoughlin, 2014). Another benefit will be that since there is mass reproducion of these prosthetics devices is that this will shorten waiting times for people who are waiting for a transplant organ, the waiting time depends on what transplant organ is required for example the heart. Someone who is waiting for a heart transplant will need to wait up to 4months; this may sound short however due to the heart being an extremely important organ 4 months could be too long of a wait for certain individuals. The mass reproduction of these prosthetics will shorten the wait time, and will further decrease the amount of deaths caused by the wait time of a needed transplant organ.</p>
-
-<br>
-<br>
-<br>
-<br>
-
-  <h1>Helping the elderly</h1>
-<br>
-  <p>Elderly people face many challenges when it comes to their motor skills, cognitive abilities and their senses. Due to their old age their motor skills can deteriorate making everyday tasks challenging for them, while their cognitive abilities get worse due to illnesses like alzeihmers that affects their memory, and even their senses worsen like their vision or hearing due to the deterioration of their retina or cochlea. The technology to help the elderely is already out there and still being improved on. Though there may still not be an artificial brain that can be implanted, there is promising work of a “pacemaker” type device for the brain; it has shown that it can enhance the memory in some epilepsy patients(Baeker, 2019), this device can also help in patients with alzeihmers, due to the illness causing memory loss, confusion, the inability to learn new things and a lot of other symptoms that doesn’t allow for the patient to be able to process things properly, this artificial brain can help in lessening the effects of these symptoms or even negate the effects entirely. Not only is there an artificial brain being developed, there is the artificial retina. The artificial retina can be used for people who have lost their vision or for people who are losing their vision, this can help a lot of people who are starting to develop visual impairments.</p> 
+<h1>Health and Safety</h1>
+ <br>
+  
+  <p>Humans functioning with an artificial organ or body part for the rest of their life can be very dangerous and unpredictable. It is a real risk as the implants may malfunction, have dangerous side effects, or are rejected by the immune system. There have been negative experiences towards breast implants and artificial hearts already with the body rejecting the technology. It is hard to risk a person’s life on a few clinical tests with humans or animals. Olsen and Kyree-Friis (2009) stated that artificial organs should be clinically tested over years or even decades with a large number of people. However, this raises ethical issues as we are creating human guinea pigs.</p>
 
 <br>
 <br>
 <br>
 <br>
+  
+<h1>Price</h1>
+<br>
+ 
+<p>Another problem is the price of even doing the procedure to implement the artificial body part or organ. Since there is a possibility that the body would reject the artificial organ or body part, putting down thousands of dollars to put in the device is sometimes just a huge risk in itself for people who don’t have that financial security or stability.</p>
 
-  <h1>Replacing and Improving</h1>
 <br>
-  <p>One of the main purposes for artificial body parts is to replace the area that has a missing body part or to improve the functionality of the body part. A good example of an implant that improves the functionality of a body part or organ is the pacemaker.  The first clinically successful pacemaker was invented in 1960. The pacemaker is implanted into the heart, and the small computer that is in the pacemaker helps regulate abnormal heartbeat, however pacemakers are still categorized under artificial body parts, while the artificial organ is the artificial heart. Artificial hearts are a good example of an artificial organ fully replacing a biological organ. Artificial hearts should not be mistaken for pacemakers, one regulates abnormal heartbeat, while the other fully replaces the heart itself. Artificial hearts are utilized when there is total heart failure or when someone is on the waiting list for a heart transplant. </p>
 <br>
-  <br>
-  <br>
-  <br>
-  <br>
+<br>
+<br>
+  
+ <h1>Security</h1>
+ <br> 
+  
+  <p><img src="img/cybsec.jpg" alt="security" style="float:right; margin-left:15px; width:350px; height:250px;">Bionic hands are being 3D printed with plastic, metal and composites . The arms can be manufactured to contain a range of smart features. The smart features can include inbuilt display, an NFC chip which allows for contactless payments, functions like a smart watch and a GSM module. All these features require access to the cloud, and since it needs to access the cloud this makes the bionic arms susceptible to security issues more precisely people hacking into the arm. This has paved the way for potential attacks against prosthetic users.</p>
+ 
+ <br>
+ <br>
+ <br>
+<br>
+
+<h1>Distributive Justice</h1>
+<br>
+  
+<p><img src="img/10.jpg" style="float:left; margin-right:20px; width:300px; height:300px;">“The development of increasingly sophisticated prostheses and implants raises issues of distributive justice” (Brey, 2005). Will there be a cheap and expensive implant? High quality and low quality one? If someone can’t afford the artificial body part or organ, can they not get what they need? Or does everyone have a moral right for one? If only certain people are lucky enough to get the artificial organ or body part this will create a number of ethical problems for people. There are already a number of practical ethical issues such as damage to an artificial limb isn’t treated the same and as fair as to bodily damage. If someone else was to break an artificial body part, it is up to the owner to pay for it. Also, when someone with a prosthetic is incarcerated, it is usually taken off them as it is seen as a weapon. This limits the movement and leaves them at a disadvantage in prison. 
+</p>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+  
+<h1>Human Augmentation</h1>
+<br>
+ <p><img src="img/aug.jpg" style="float:right; margin-left:15px; width: 300px; height: 300px;">
+   Human augmentation is the physical or mental enhancement of the human body to perform better. This raises questions which could impact human life in the future. What if technology reaches a point when artificial body parts or limbs perform a lot better than how our body naturally is? This would make everyone want to be artificial and will create bionic people. How far could this go? “If certain augmentations get very popular, there is also a risk that they will become accepted as the norm, and people without one will be seen as cripples” (Brey 2005).
+</p>
+  
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <footer id="footer">
 
@@ -121,7 +139,7 @@ Obviously one of the main purposes of the bionic limbs is to make the prosthetic
 
   <script type="text/javascript" src="java.js"></script>
 </footer>
- 
+
 </div>
 </div>
 
