--- a/references.html
+++ b/references.html
@@ -95,6 +95,18 @@
 <br>
 <br>
 <br>  
+<br>
+
+ <p>Osborne, C. (2019, February 26). MWC 2019: Your bionic hand is now at risk from hackers
+  <br>
+    <br> 
+       <div class="t-indent"><a href="https://www.zdnet.com/article/your-bionic-hand-is-now-at-risk-from-hackers/" target="blank">https://www.zdnet.com/article/your-bionic-hand-is-now-at-risk-from-hackers/</a></div>
+    </p>
+<br>
+<br>
+<br> 
+<br> 
+
   <p>Prostheses. (n.d.). 
   <br>
   <br> 
@@ -102,7 +114,8 @@
     </p>
 <br>
 <br>
-<br>  
+<br> 
+<br> 
 
   <p>Svenaeus, F. (2010) What is an organ? Heidegger and the Phenomenology of Organ 
     <br>
@@ -110,6 +123,7 @@
        <div class="t-indent">Transplantation. Theoretical Medicine and Bioethics, 31(3), 179-196. 
        <a href="https://doi.org/10.1007/s11017-010-9144-y">https://doi.org/10.1007/s11017-010-9144-y</a></div>
   </p>
+<br>
 <br>
 <br>
 <br>
@@ -122,13 +136,29 @@
 </p>
 <br>
 <br>
-  <br>
+<br>
+<br>
 
 <p>Walker, M.J. (2021). A Heart without Life: Artificial Organs and the Lived Body. The Hastings   
   <br>
   <br>
      <div class="t-indent">Center Report, 51(1), 28-38.<a href="https://doi.org/10.1002/hast.1217">https://doi.org/10.1002/hast.1217</a></div>
 </p>
+<br>
+<br>
+<br>
+<br>
+
+  <p>(52), T., & (70), M. (n.d.). What Are the Advantages and Disadvantages of Artificial Organs? 
+    <br>
+    <br>
+       <div class="t-indent">artificial person is transferred,not function in the body.</div>
+       <br>
+        <br>
+       <div class="t-indent"><a href="https://steemit.com/science/@the-world/what-are-the-advantages-and-disadvantages-of-artificial-organs#:~:text=An">https://steemit.com/science/@the-world/what-are-the-advantages-and-disadvantages-of-artificial-organs#:~:text=An</a></div>
+  </p>
+<br>
+<br>
 <br>
 
 
