--- a/conformance.html
+++ b/conformance.html
@@ -67,14 +67,17 @@
 
 <table>
   <tr>
+    <th>Guideline</th>
     <th>Word Length (approx 3000 - 4500 words, excluding references)</th>
     <th>Figures(3 min 15 max - consider copyright)</th>
     <th>Multi-media Resources(Links - 3 max - consider copyright)</th>
     <th>References (10 min high quality refereed sources, 20 max - including links)</th>
   </tr>
   <tr>
-    <td>Topic-name:</td>
-      <td>artificial body parts and organs</td>
+    <td>Number Included:</td>
+      <td>Gt = 0</td>
+      <td>Lt = 3</td>
+      <td>Gt = 10</td>
   </tr> 
 </table>
 
@@ -90,11 +93,7 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-  
+
 <footer id="footer">
 
     <div class="copyright">
