--- a/process.html
+++ b/process.html
@@ -66,6 +66,7 @@
     <th>Meeting Minutes</th>
     <th>Project Portfolio</th>
     <th>Guideline Conformance</th>
+    <th>Assesment Rubric</th>
   </tr>
   <tr>
     <td><a href="formation.html">Link</a></td>
@@ -74,6 +75,7 @@
     <td><a href="meeting.html">Link</a></td>
     <td><a href="portfolio.html">Link</a></td>
     <td><a href="conformance.html">Link</a></td>
+     <td><a href="rubric.html">Link</a></td>
   </tr>
    
 </table>
