--- a/rubric.html
+++ b/rubric.html
@@ -53,7 +53,9 @@
 <h1>Assesment Rubric</h1>
 <br>
 <br>
-
+<p><b>Student Name:..........., ID:............, Grade:..............</b></p>
+<br>
+<br>
 
 <p>Project Team presentation Assesment Rubric</p>
 <div class="container">
