--- a/rubric.html
+++ b/rubric.html
@@ -59,9 +59,9 @@
 
 <p>Project Team presentation Assesment Rubric</p>
 <div class="container">
-  <div class="center"><img src ="img/slide1.jpg" alt="1st"></div>
-  <div class="center"><img src ="img/slide2.jpg" alt="2nd"></div>
-  <div class="center"><img src ="img/slide3.jpg" alt="3rd"></div>
+  <div class="center"><img src ="img/slide1.JPG" alt="1st"></div>
+  <div class="center"><img src ="img/slide2.JPG" alt="2nd"></div>
+  <div class="center"><img src ="img/slide3.JPG" alt="3rd"></div>
 
 </div>
 <br>
@@ -69,8 +69,8 @@
  
  <p>Web Resource Assesment Rubric</p>
  <div class="container">
-  <div class="center"><img src ="img/web1.jpg" alt="web1st"></div>
-  <div class="center"><img src ="img/web2.jpg" alt="web2nd"></div>
+  <div class="center"><img src ="img/web1.JPG" alt="web1st"></div>
+    <div class="center"><img src ="img/web2.JPG" alt="web2nd"></div>
 </div>
 
 
