--- a/conformance.html
+++ b/conformance.html
@@ -75,6 +75,7 @@
   </tr>
   <tr>
     <td>Number Included:</td>
+    <td>Gt = 4584 words</td>
       <td>Gt = 0</td>
       <td>Lt = 8</td>
       <td>Gt = 10</td>
