--- a/references.html
+++ b/references.html
@@ -77,11 +77,29 @@
 <br>
 <br>
 
+  <p>." Encyclopedia of Science, Technology, and Ethics. . Encyclopedia.com. 1 Jun. 2021 . (2021, June 06). 
+    <br>
+    <br>
+       <div class="t-indent"><a href="https://www.encyclopedia.com/medicine/divisions-diagnostics-and-procedures/medicine/prostheses-and-implants" target="blank">"https://www.encyclopedia.com/medicine/divisions-diagnostics-and-procedures/medicine/prostheses-and-implants:</a></div>
+    </p>
+<br>
+<br>
+<br>
+
   <p>Johns Hopkins University Applied Physics Laboratory. (2014, December 17). Amputee Makes History with APL's Modular Prosthetic Limb. 
     <br>
     <br>
        <div class="t-indent"><a href="https://www.newswise.com/articles/amputee-makes-history-with-apl-s-modular-prosthetic-limb
 " target="blank">"https://www.newswise.com/articles/amputee-makes-history-with-apl-s-modular-prosthetic-limb"</a></div>
+   </p>
+<br>
+<br>
+<br>
+
+ <p>Mischa. (2017, September 26). Bionic limbs. 
+    <br>
+    <br>
+       <div class="t-indent"><a href="https://www.science.org.au/curious/people-medicine/bionic-limbs" target="blank">"https://www.science.org.au/curious/people-medicine/bionic-limbs"</a></div>
    </p>
 <br>
 <br>
@@ -161,9 +179,41 @@
 <br>
 <br>
 
-<h1>Images Referenced</h1>
-<br><br>
-<div class="t-indent">HRD</div>
+<h1>Images referenced</h1>
+<br>
+<br>
+<br>
+<br>
+
+<p> HRD(n.d). [hacker that is connected to many devices][jpg]
+    <br>
+       <br>
+        <br>
+       <div class="t-indent"><a href="https://www.hcamag.com/nz/specialisation/hr-technology/the-most-dangerous-cyber-security-mistakes/229500">"https://www.hcamag.com/nz/specialisation/hr-technology/the-most-dangerous-cyber-security-mistakes/229500"</a></div>
+  </p>
+  <br>
+<br>
+<br>
+<br>
+
+  <p> U.S Fodd and Drug Administrations(2017).[Bionic arm picking up small ball][jpg]
+    <br>
+       <br>
+        <br>
+       <div class="t-indent"><a href="https://bunewsservice.com/neural-prostheses-step-up-newer-technologies-allow-users-to-feel/">"https://bunewsservice.com/neural-prostheses-step-up-newer-technologies-allow-users-to-feel/"</a></div>
+  </p>
+
+<br>
+<br>
+<br>
+<br>
+        
+  <p> Omnia Health(n.d).[Shows technolgy that is connected to many other medical devices][jpg]
+    <br>
+       <br>
+        <br>
+       <div class="t-indent"><a href="https://insights.omnia-health.com/technology/need-hour-connected-healthcare">"https://insights.omnia-health.com/technology/need-hour-connected-healthcare"</a></div>
+  </p>
 
 
 
